tests/NormalTests/paczka2/big_fuzzy/72131368.err
Error in line 2: M2ra3te S877 75,4
Error in line 11: M2ra3te A45 -1,8
Error in line 10: M2ra3te A45 5,0
Error in line 9: 1LJ9G S877 7,1
Error in line 31: A45 A208 35,5
Error in line 16: zL8 A45 27,4
Error in line 40: zL8 A8z7 60,3
Error in line 34: zL8 A897 15,3
Error in line 35: gHh2RwQMl S877 44,4
Error in line 44: A45 A208 88,9
Error in line 46: gHh2RwQMl A897 34,8
Error in line 61: 1LJ9G A45 101,3
Error in line 58: A45 A208 14,6
Error in line 65: 1LJ9G S877 29,1
Error in line 73: M2ra3te A45 71,7
Error in line 88: gHh2RwQMl A45 88,2
Error in line 105: 1LJ9G S877 271,3
Error in line 100: gHh2RwQMl A45 13,5
Error in line 115: gHh2RwQMl S877 97,7
Error in line 113: H3ZaePTsL0 S877 61,8
Error in line 87: zL8 A897 68,9
Error in line 120: 7oCmGDd S877 12,3
Error in line 106: 1LJ9G A897 45,9
Error in line 133: 1LJ9G S877 38,9
Error in line 121: H3ZaePTsL0 A897 12,3
Error in line 123: zL8 A208 89,4
Error in line 138: H3ZaePTsL0 S877 0,1
Error in line 141: H3ZaePTsL0 A208 18,0
Error in line 140: zL8 A897 5,1
Error in line 149: zL8 A45 69,1
Error in line 152: H3ZaePTsL0 A897 -3,0
Error in line 153: M2ra3te S877 76,5
Error in line 144: H3ZaePTsL0 A897 100,0
Error in line 163: zL8 S877 95,9
Error in line 169: 1LJ9G A45 32,9
Error in line 170: A45 A208 37,3
Error in line 173: 7oCmGDd A45 61,6
Error in line 178: H3ZaePTsL0 A45 1,8
Error in line 200: 7oCmGDd A!5 28,3
Error in line 196: A45 A897 157,6
Error in line 205: M2ra3te A45 45,3
Error in line 210: zL8 A45 20,6
Error in line 219: H3ZaePTsL0 S877 56,0
Error in line 207: 7oCmGDd A897 23,3
Error in line 214: M2ra3te A897 324,0
Error in line 220: H3ZaePTsL0 A208 4,9
Error in line 235: zL8 A45 90,3
Error in line 240: H3ZaePTsL0 A45 95,7
Error in line 241: H3ZaePTsL0 A897 95,9
